--- a/index.html
+++ b/index.html
@@ -273,10 +273,10 @@
           Website</a>,
         <a href="https://ideas.repec.org/f/pmi779.html"> RePeC Author Page</a>,
         <a
-          href="https://orcid.org/0000-0002-7544-2263">ORCiD</a>,
+            href="https://orcid.org/0000-0002-7544-2263">ORCiD</a>,
         <a href="https://scholar.google.com/citations?user=snvM7KMAAAAJ&hl=en">Google Scholar</a>,
         <a
-          href="https://www.linkedin.com/in/sara-mitchell-056a7033/">LinkedIn</a>
+            href="https://www.linkedin.com/in/sara-mitchell-056a7033/">LinkedIn</a>
       </td>
     </tr>
     </tbody>
@@ -545,57 +545,10 @@
 
   <a class="anchor" name="Course Descriptions"><h2>Selected Course Descriptions</h2></a>
 
-  Course descriptions for selected courses are available below. These include: Economics of Brexit, Economics of
-  Migration, Academic Writing, and Mathematics and Statistics. Additional course descriptions and teaching evaluations
+  Course descriptions for selected courses are available below. These include: Economics of
+  Migration, Human Capital and the Knowledge Economy, Economics of Brexit, Academic Writing, and Mathematics and
+  Statistics. Additional course descriptions and teaching evaluations
   are available upon request.
-
-  <h3>Economics of Brexit</h3>
-  <p>I lectured the Economics of Brexit seminar offered by the Chair of Urban, Regional, and International Economics at
-    TU Dortmund in Spring 2020. This seminar was taught to approx. 20 final year bachelor students
-    and masters students in the Department of Economics and the Department of Spatial Planning. The seminar was also
-    open to students from
-    several other faculties, such as industrial engineering and computer science.</p>
-  <p>This seminar aims to build on students’ prior knowledge of international trade, factor market integration, tariff
-    policy, and regional competition and industrial policy. Students will apply this knowledge to a practical,
-    real-world example – Brexit. In this setting, students will:</p>
-  <ul>
-    <li>
-      Gain a deeper understanding of complex trade interdependencies between EU and other countries;
-    </li>
-    <li>
-      Learn about the economic framework of decision-making within the EU, particularly with respect to how EU trade
-      policies are set within the EU and between EU and other countries;
-    </li>
-    <li>
-      Explore the European Union’s legal framework and legislative process with respect to developing trade policies;
-    </li>
-    <li>
-      Learn how to evaluate current economic policy debates by synthesizing country-specific trade policy and data and
-      producing a policy report from that country’s perspective.
-    </li>
-  </ul>
-  <p> The first half of the course involves lectures on the history of European economic integration. These lectures
-    provide an overview of the history of the European Union, EU institutions and decision-making processes before
-    discussing the microeconomics and macroeconomics of European integration. Topics covered include: preferential trade
-    liberalisation, customs union vs free trade agreement, types of barriers to trade, allocation and growth effects of
-    trade liberalisation, effect of trade liberalisation on labour markets and migration, exchange rates, optimum
-    currency areas, monetary integration, fiscal policy, and the effect of the global financial crisis. This seminar
-    discussed EU policies such as Common Agricultural Policy (CAP), EU structural funds and cohesion policy, EU
-    competition and state aid, and the Stability and Growth Pact.</p>
-  <p>In the second week, students are allocated into groups and assigned an EU member state, and the students are
-    required to research that country's economic relationship with the UK and how it will likely be affected by Brexit.
-    During the second half of the course, the students present their country's position to the class and engage in
-    simulated Brexit negotiations. The assessments include two shorter summary reports submitted before and after the
-    negotiation process and a longer research paper submitted at the end of the course.</p>
-  <p>Reading list:</p>
-  <ul>
-    <li>
-      Primary textbook: Baldwin and Wyplosx (2020) "The Economics of European Integration"
-    </li>
-    <li>
-      Secondary textbook: Hix and Høyland (2011). "The Political System of the European Union"
-    </li>
-  </ul>
 
   <h3>Economics of Migration</h3>
   <p>I lectured the Economics of Migration seminar offered by the Chair of Urban, Regional, and International
@@ -668,6 +621,161 @@
     <li>
       Moser, P., Voena, A., & Waldinger, F. (2014). German Jewish émigrés and US invention. American Economic
       Review, 104(10), 3222-55. Chicago
+    </li>
+  </ul>
+
+  <h3>Human Capital and the Knowledge Economy</h3>
+  <p>I was a teaching assistant for the Human Capital and the Knowledge Economy course offered by the Chair of Urban,
+    Regional, and International Economics at TU Dormtund in Spring 2019 and Spring 2020. This course is normally taught
+    to approx. 60-80 bachelor students in the Department of Economics.
+  <p>This course discusses the role of knowledge and education in the careers of individuals and for the economy as a
+    whole. The lectures introduced the students to theoretical models and empirical evidence, while the tutorials provided
+    practice exercises for the theoretical models and applied econometrics examples. For example, the practice exercises
+    included questions on the Becker and Spence models, questions on how various empirical approaches address the
+    issue of ability bias, and questions on how to interpret the output of Mincer earnings regressions.</p>
+  <p>The course is divided into three components. A selection of the reading list is below.</p>
+  <ol>
+    <li>
+      <em>Investment in human capital</em>: Becker model of human capital, returns to education, optimal level of education,
+      education as a signal (Spence model)
+    </li>
+      <ul>
+        <li>
+          Primary textbook: Gary Becker (1994). "Human Capital: A Theoretical and Empirical Analysis, with Special
+          Reference to Education"
+        </li>
+        <li>
+          Secondary textbook: George J. Borjas (2019). "Labor Economics"
+        </li>
+        <li>
+          Spence, A. (1973). Job Market Signaling. The Quarterly Journal of Economics, 87(3), 355-374.
+        </li>
+        <li>
+          Ashenfelter, O., & Rouse, C. (1998). Income, schooling, and ability: Evidence from a new sample of identical
+          twins. The Quarterly Journal of Economics, 113(1), 253-284.
+          Chicago
+        </li>
+        <li>
+          Card, D. (1993). Using geographic variation in college proximity to estimate the return to schooling (No.
+          w4483). National Bureau of Economic Research.
+        </li>
+        <li>
+          Angrist, J. D., & Keueger, A. B. (1991). Does compulsory school attendance affect schooling and earnings?. The
+          Quarterly Journal of Economics, 106(4), 979-1014.
+        </li>
+        <li>
+          Tyler, J. H., Murnane, R. J., & Willett, J. B. (2000). Estimating the labor market signaling value of the GED.
+          The Quarterly Journal of Economics, 115(2), 431-468.
+        </li>
+      </ul>
+    <li>
+      <em>Education and society</em>: Quality of education, education in the developing world, impact of education on families
+      and health behaviour
+    </li>
+      <ul>
+        <li>
+          Duflo, E. (2001). Schooling and labor market consequences of school construction in Indonesia: Evidence from an
+          unusual policy experiment. American economic review, 91(4), 795-813.
+        </li>
+        <li>
+          Hanushek, E. A., & Kimko, D. D. (2000). Schooling, labor-force quality, and the growth of nations. American
+          economic review, 90(5), 1184-1208. Chicago
+        </li>
+        <li>
+          Bishop, J. H. (1989). Is the test score decline responsible for the productivity growth decline?. The American
+          Economic Review, 178-197.
+        </li>
+        <li>
+          Basu, K., & Van, P. H. (1998). The economics of child labor. American economic review, 412-427.
+        </li>
+        <li>
+          Evans, D., Kremer, M., & Ngatia, M. (2008). The impact of distributing school uniforms on children’s education in
+          Kenya. World Bank.
+          Chicago
+        </li>
+        <li>
+          Miguel, E., & Kremer, M. (2004). Worms: identifying impacts on education and health in the presence of treatment
+          externalities. Econometrica, 72(1), 159-217.
+        </li>
+      </ul>
+    <li>
+      <em>Knowledge economy</em>: Production of knowledge, knowledge transfer, knowledge as a public good
+    </li>
+      <ul>
+        <li>
+          Romer, P. M. (1990). Endogenous technological change. Journal of political Economy, 98(5, Part 2), S71-S102.
+        </li>
+        <li>
+          Jones, B. F. (2009). The burden of knowledge and the “death of the renaissance man”: Is innovation getting
+          harder?. The Review of Economic Studies, 76(1), 283-317.
+        </li>
+        <li>
+          Jones, B. F. (2010). Age and great invention. The Review of Economics and Statistics, 92(1), 1-14.
+          Chicago
+        </li>
+        <li>
+          Mokyr, J. (2002). The gifts of Athena: Historical origins of the knowledge economy. Princeton University Press.
+        </li>
+        <li>
+          Scotchmer, S. (1991). Standing on the shoulders of giants: cumulative research and the patent law. Journal of economic perspectives, 5(1), 29-41.
+        </li>
+        <li>
+          Azoulay, P., Graff Zivin, J. S., & Wang, J. (2010). Superstar extinction. The Quarterly Journal of Economics, 125(2), 549-589.
+        </li>
+        <li>
+          Waldinger, F. (2012). Peer effects in science: Evidence from the dismissal of scientists in Nazi Germany. The Review of Economic Studies, 79(2), 838-861.
+          Chicago
+        </li>
+        <li>
+          Hellmanzik, C. (2010). Location matters: Estimating cluster premiums for prominent modern artists. European Economic Review, 54(2), 199-218.
+        </li>
+      </ul>
+  </ol>
+
+  <h3>Economics of Brexit</h3>
+  <p>I lectured the Economics of Brexit seminar offered by the Chair of Urban, Regional, and International Economics at
+    TU Dortmund in Spring 2020. This seminar was taught to approx. 20 final year bachelor students and masters students
+    in the Department of Economics and the Department of Spatial Planning. The seminar was also
+    open to students from several other faculties, such as industrial engineering and computer science.</p>
+  <p>This seminar aims to build on students’ prior knowledge of international trade, factor market integration, tariff
+    policy, and regional competition and industrial policy. Students will apply this knowledge to a practical,
+    real-world example – Brexit. In this setting, students will:</p>
+  <ul>
+    <li>
+      Gain a deeper understanding of complex trade interdependencies between EU and other countries;
+    </li>
+    <li>
+      Learn about the economic framework of decision-making within the EU, particularly with respect to how EU trade
+      policies are set within the EU and between EU and other countries;
+    </li>
+    <li>
+      Explore the European Union’s legal framework and legislative process with respect to developing trade policies;
+    </li>
+    <li>
+      Learn how to evaluate current economic policy debates by synthesizing country-specific trade policy and data and
+      producing a policy report from that country’s perspective.
+    </li>
+  </ul>
+  <p> The first half of the course involves lectures on the history of European economic integration. These lectures
+    provide an overview of the history of the European Union, EU institutions and decision-making processes before
+    discussing the microeconomics and macroeconomics of European integration. Topics covered include: preferential trade
+    liberalisation, customs union vs free trade agreement, types of barriers to trade, allocation and growth effects of
+    trade liberalisation, effect of trade liberalisation on labour markets and migration, exchange rates, optimum
+    currency areas, monetary integration, fiscal policy, and the effect of the global financial crisis. This seminar
+    discussed EU policies such as Common Agricultural Policy (CAP), EU structural funds and cohesion policy, EU
+    competition and state aid, and the Stability and Growth Pact.</p>
+  <p>In the second week, students are allocated into groups and assigned an EU member state, and the students are
+    required to research that country's economic relationship with the UK and how it will likely be affected by Brexit.
+    During the second half of the course, the students present their country's position to the class and engage in
+    simulated Brexit negotiations. The assessments include two shorter summary reports submitted before and after the
+    negotiation process and a longer research paper submitted at the end of the course.</p>
+  <p>Reading list:</p>
+  <ul>
+    <li>
+      Primary textbook: Baldwin and Wyplosx (2020) "The Economics of European Integration"
+    </li>
+    <li>
+      Secondary textbook: Hix and Høyland (2011). "The Political System of the European Union"
     </li>
   </ul>
 
@@ -794,21 +902,6 @@
   </ul>
 
 
-  <h3>Economics of European Integration</h3>
-  <p>Course level: Bachelor or masters</p>
-  <p>Course description: This course covers the microeconomics and macroeconomics the EU integration process from
-    the post-war period to present day. We will discuss the phases of trade integration leading to the
-    establishment of a single market, the geography of inequality and regional disparities and patterns of
-    migration, the evolution of CAP and EU Regional Policy, theory of optimal currency areas, evolution of
-    monetary policy and the euro, and the impact of the financial crisis, Brexit, and COVID-19.</p>
-  <p>Core teaching elements: Lectures, research paper with presentation</p>
-  <p>Recommended reading:</p>
-  <ul>
-    <li>
-      <em>The Economics of European Integration</em> by Charles Wyplosz and Richard E. Baldwin
-    </li>
-  </ul>
-
   <h3>Economics of Art and Culture</h3>
   <p>Course level: Masters</p>
   <p>Course description: In this course, students will learn how to use tools of economics to interpret and
@@ -839,7 +932,7 @@
     </li>
   </ul>
 
-  <h3>Economic History of Knowledge and Ideas</h3>
+  <h3>Topics in Economic History</h3>
   <p>Course level: PhD</p>
   <p>Course description: A number of innovations and circumstances throughout history have had major influence on
     the stock of knowledge, idea creation, human capital formation, and innovation. This course examines
@@ -873,6 +966,21 @@
     <li>
       Giorcelli, M., and Moser, P. (2019). Copyrights and creativity: Evidence from Italian operas. Available
       at SSRN 2505776.
+    </li>
+  </ul>
+
+  <h3>Economics of European Integration</h3>
+  <p>Course level: Bachelor or masters</p>
+  <p>Course description: This course covers the microeconomics and macroeconomics the EU integration process from
+    the post-war period to present day. We will discuss the phases of trade integration leading to the
+    establishment of a single market, the geography of inequality and regional disparities and patterns of
+    migration, the evolution of CAP and EU Regional Policy, theory of optimal currency areas, evolution of
+    monetary policy and the euro, and the impact of the financial crisis, Brexit, and COVID-19.</p>
+  <p>Core teaching elements: Lectures, research paper with presentation</p>
+  <p>Recommended reading:</p>
+  <ul>
+    <li>
+      <em>The Economics of European Integration</em> by Charles Wyplosz and Richard E. Baldwin
     </li>
   </ul>
 
