add missing item to labour economics course description

--- a/index.html
+++ b/index.html
@@ -960,6 +960,9 @@
       <em>Handbook of Labor Economics</em> edited by David Card and Orley Ashenfelter and other academic journal
       articles
     </li>
+    <li>
+      Relevant news articles, podcasts and other sources
+    </li>
   </ul>
 
 
