updating working paper title

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <div>
-    <a name="Home"></a>
+    <a id="Home"></a>
     <!--Header-->
     <div class="header">
         <div class="width-wrap">
@@ -180,7 +180,7 @@
 
     <hr>
 
-    <a class="anchor" name="Education"><h2>Education</h2></a>
+    <a class="anchor" id="Education"><h2>Education</h2></a>
     <table>
         <tbody>
         <tr>
@@ -246,7 +246,7 @@
 
     <hr>
 
-    <a class="anchor" name="Other"><h2>Other Information</h2></a>
+    <a class="anchor" id="Other"><h2>Other Information</h2></a>
 
     <table>
         <tbody>
@@ -285,7 +285,7 @@
 
     <hr>
 
-    <a class="anchor" name="Contact"><h2>Contact</h2></a>
+    <a class="anchor" id="Contact"><h2>Contact</h2></a>
     <table>
         <tbody>
         <tr>
@@ -363,9 +363,9 @@
 
     <hr>
 
-    <a class="anchor" name="Other Research"><h2>Other Research</h2></a>
+    <a class="anchor" id="Other Research"><h2>Other Research</h2></a>
     <h4>
-        Decomposing agglomeration effects in literature: Evidence on peer quantity, quality, and productivity channels.
+        Location effects in literature: Evidence on peer quantity, quality, and productivity channels.
         <em>Working
             paper</em>
     </h4>
@@ -429,7 +429,7 @@
 
     <hr>
 
-    <a class="anchor" name="Presentations"><h2>Research Presentations</h2></a>
+    <a class="anchor" id="Presentations"><h2>Research Presentations</h2></a>
     <table>
         <tbody>
         <tr>
@@ -492,7 +492,7 @@
 
     <h1>Teaching</h1>
 
-    <a class="anchor" name="Teaching Overview"><h2>Teaching Overview</h2></a>
+    <a class="anchor" id="Teaching Overview"><h2>Teaching Overview</h2></a>
 
     <p>I have a broad range of experience teaching at both the undergraduate and graduate level, ranging from teaching
         core economic theory, math, and statistics courses to undergraduate students to teaching applied microeconomics
@@ -514,7 +514,7 @@
 
     <hr>
 
-    <a class="anchor" name="Courses"><h2>List of Courses Taught</h2></a>
+    <a class="anchor" id="Courses"><h2>List of Courses Taught</h2></a>
 
     <table style="width: 100%; border: none;">
         <tbody>
@@ -590,7 +590,7 @@
 
     <hr>
 
-    <a class="anchor" name="Course Descriptions"><h2>Selected Course Descriptions</h2></a>
+    <a class="anchor" id="Course Descriptions"><h2>Selected Course Descriptions</h2></a>
 
     Course descriptions for selected courses are available below. These include: Economics of
     Migration, Human Capital and the Knowledge Economy, Economics of Brexit, Academic Writing, and Mathematics and
@@ -949,7 +949,7 @@
 
     <hr>
 
-    <a class="anchor" name="Teaching Interests"><h2>Teaching Interests</h2></a>
+    <a class="anchor" id="Teaching Interests"><h2>Teaching Interests</h2></a>
 
     I teach courses in urban economics, labour economics (including human capital and migration), and European economic
     history. I am also qualified to teach mathematics, statistics, and microeconomics at the undergraduate level, as
