updating computer languages and software

--- a/index.html
+++ b/index.html
@@ -260,8 +260,12 @@
             </td>
         </tr>
         <tr>
-            <td>Software:</td>
-            <td>STATA, R, LaTeX, Markdown, HTML, CSS</td>
+            <td>Computer Languages:</td>
+            <td>STATA (ado), R, LaTeX, Markdown, HTML, CSS</td>
+        </tr>
+        <tr>
+            <td>Software and IDEs:</td>
+            <td>STATA, IntelliJ IDEA, GitHub, Overleaf, TexStudio, RStudio, Atom</td>
         </tr>
         <tr>
             <td>Languages:</td>
