Fixing typo in job market paper abstract

--- a/index.html
+++ b/index.html
@@ -363,10 +363,10 @@
     </a>
   </h4>
   <p>
-    This paper provides evidence of potential channels through which these location effects occur in the context of
+    This paper provides evidence of potential channels through which location effects occur in the context of
     literary production. In particular, this paper determines whether location effects occur through a quality channel,
     a quantity channel, or a productivity channel. This study utilises a unique dataset with information on 369
-    prominent authors in the UK and Ireland born 1700–1925. This paper constructs age-productivity profiles to determine
+    prominent authors in the UK and Ireland from 1725-1975. This paper constructs age-productivity profiles to determine
     the productivity gains associated with the characteristics of co-located authors. Individual fixed effects are used
     to control for spatial and group sorting. Evidence suggests location effects occur primarily through quality and
     productivity channels and that these effects occur through the general clustering of authors and not through
