Fixing order list items, Adding alt tag to banner

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!--Header-->
   <div class="header">
     <div class="width-wrap">
-      <img class="banner" src="img/cover.jpg"/>
+      <img class="banner" src="img/cover.jpg" alt="Cover Image"/>
       <div class="a">
         <div class="avatar">
           <img src="img/photo.jpg" alt="Dr. Sara Mitchell"/>
@@ -674,7 +674,6 @@
       <em>Investment in human capital</em>: Becker model of human capital, returns to education, optimal level of
       education,
       education as a signal (Spence model)
-    </li>
     <ul>
       <li>
         Primary textbook: Gary Becker (1994). "Human Capital: A Theoretical and Empirical Analysis, with Special
@@ -704,11 +703,11 @@
         The Quarterly Journal of Economics, 115(2), 431-468.
       </li>
     </ul>
+    </li>
     <li>
       <em>Education and society</em>: Quality of education, education in the developing world, impact of education on
       families
       and health behaviour
-    </li>
     <ul>
       <li>
         Duflo, E. (2001). Schooling and labor market consequences of school construction in Indonesia: Evidence from an
@@ -736,9 +735,9 @@
         externalities. Econometrica, 72(1), 159-217.
       </li>
     </ul>
+    </li>
     <li>
       <em>Knowledge economy</em>: Production of knowledge, knowledge transfer, knowledge as a public good
-    </li>
     <ul>
       <li>
         Romer, P. M. (1990). Endogenous technological change. Journal of political Economy, 98(5, Part 2), S71-S102.
@@ -772,6 +771,7 @@
         Economic Review, 54(2), 199-218.
       </li>
     </ul>
+    </li>
   </ol>
 
   <h3>Economics of Brexit</h3>
