--- a/index.html
+++ b/index.html
@@ -260,8 +260,12 @@
       </td>
     </tr>
     <tr>
-      <td>Software:</td>
-      <td>STATA, R, LaTeX, Markdown, HTML, CSS</td>
+      <td>Computer languages:</td>
+      <td>STATA ado, R, TeX, Markdown, HTML, CSS</td>
+    </tr>
+    <tr>
+      <td>Software & IDEs:</td>
+      <td>STATA, IntelliJ IDEA, GitHub, Overleaf, TexStudio, RStudio</td>
     </tr>
     <tr>
       <td>Languages:</td>
