Add more info about me, including photos

--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
           <a href="#Teaching Interests">Teaching Interests</a>
         </div>
       </div>
+      <div class="dropdown">
+        <a href="#Misc">Miscellaneous</a>
+      </div>
     </div>
   </div>
 </div>
@@ -678,103 +681,106 @@
       <em>Investment in human capital</em>: Becker model of human capital, returns to education, optimal level of
       education,
       education as a signal (Spence model)
-    <ul>
-      <li>
-        Primary textbook: Gary Becker (1994). "Human Capital: A Theoretical and Empirical Analysis, with Special
-        Reference to Education"
-      </li>
-      <li>
-        Secondary textbook: George J. Borjas (2019). "Labor Economics"
-      </li>
-      <li>
-        Spence, A. (1973). Job Market Signaling. The Quarterly Journal of Economics, 87(3), 355-374.
-      </li>
-      <li>
-        Ashenfelter, O., & Rouse, C. (1998). Income, schooling, and ability: Evidence from a new sample of identical
-        twins. The Quarterly Journal of Economics, 113(1), 253-284.
-        Chicago
-      </li>
-      <li>
-        Card, D. (1993). Using geographic variation in college proximity to estimate the return to schooling (No.
-        w4483). National Bureau of Economic Research.
-      </li>
-      <li>
-        Angrist, J. D., & Keueger, A. B. (1991). Does compulsory school attendance affect schooling and earnings?. The
-        Quarterly Journal of Economics, 106(4), 979-1014.
-      </li>
-      <li>
-        Tyler, J. H., Murnane, R. J., & Willett, J. B. (2000). Estimating the labor market signaling value of the GED.
-        The Quarterly Journal of Economics, 115(2), 431-468.
-      </li>
-    </ul>
+      <ul>
+        <li>
+          Primary textbook: Gary Becker (1994). "Human Capital: A Theoretical and Empirical Analysis, with Special
+          Reference to Education"
+        </li>
+        <li>
+          Secondary textbook: George J. Borjas (2019). "Labor Economics"
+        </li>
+        <li>
+          Spence, A. (1973). Job Market Signaling. The Quarterly Journal of Economics, 87(3), 355-374.
+        </li>
+        <li>
+          Ashenfelter, O., & Rouse, C. (1998). Income, schooling, and ability: Evidence from a new sample of identical
+          twins. The Quarterly Journal of Economics, 113(1), 253-284.
+          Chicago
+        </li>
+        <li>
+          Card, D. (1993). Using geographic variation in college proximity to estimate the return to schooling (No.
+          w4483). National Bureau of Economic Research.
+        </li>
+        <li>
+          Angrist, J. D., & Keueger, A. B. (1991). Does compulsory school attendance affect schooling and earnings?. The
+          Quarterly Journal of Economics, 106(4), 979-1014.
+        </li>
+        <li>
+          Tyler, J. H., Murnane, R. J., & Willett, J. B. (2000). Estimating the labor market signaling value of the GED.
+          The Quarterly Journal of Economics, 115(2), 431-468.
+        </li>
+      </ul>
     </li>
     <li>
       <em>Education and society</em>: Quality of education, education in the developing world, impact of education on
       families
       and health behaviour
-    <ul>
-      <li>
-        Duflo, E. (2001). Schooling and labor market consequences of school construction in Indonesia: Evidence from an
-        unusual policy experiment. American economic review, 91(4), 795-813.
-      </li>
-      <li>
-        Hanushek, E. A., & Kimko, D. D. (2000). Schooling, labor-force quality, and the growth of nations. American
-        economic review, 90(5), 1184-1208. Chicago
-      </li>
-      <li>
-        Bishop, J. H. (1989). Is the test score decline responsible for the productivity growth decline?. The American
-        Economic Review, 178-197.
-      </li>
-      <li>
-        Basu, K., & Van, P. H. (1998). The economics of child labor. American economic review, 412-427.
-      </li>
-      <li>
-        Evans, D., Kremer, M., & Ngatia, M. (2008). The impact of distributing school uniforms on children’s education
-        in
-        Kenya. World Bank.
-        Chicago
-      </li>
-      <li>
-        Miguel, E., & Kremer, M. (2004). Worms: identifying impacts on education and health in the presence of treatment
-        externalities. Econometrica, 72(1), 159-217.
-      </li>
-    </ul>
+      <ul>
+        <li>
+          Duflo, E. (2001). Schooling and labor market consequences of school construction in Indonesia: Evidence from
+          an
+          unusual policy experiment. American economic review, 91(4), 795-813.
+        </li>
+        <li>
+          Hanushek, E. A., & Kimko, D. D. (2000). Schooling, labor-force quality, and the growth of nations. American
+          economic review, 90(5), 1184-1208. Chicago
+        </li>
+        <li>
+          Bishop, J. H. (1989). Is the test score decline responsible for the productivity growth decline?. The American
+          Economic Review, 178-197.
+        </li>
+        <li>
+          Basu, K., & Van, P. H. (1998). The economics of child labor. American economic review, 412-427.
+        </li>
+        <li>
+          Evans, D., Kremer, M., & Ngatia, M. (2008). The impact of distributing school uniforms on children’s education
+          in
+          Kenya. World Bank.
+          Chicago
+        </li>
+        <li>
+          Miguel, E., & Kremer, M. (2004). Worms: identifying impacts on education and health in the presence of
+          treatment
+          externalities. Econometrica, 72(1), 159-217.
+        </li>
+      </ul>
     </li>
     <li>
       <em>Knowledge economy</em>: Production of knowledge, knowledge transfer, knowledge as a public good
-    <ul>
-      <li>
-        Romer, P. M. (1990). Endogenous technological change. Journal of political Economy, 98(5, Part 2), S71-S102.
-      </li>
-      <li>
-        Jones, B. F. (2009). The burden of knowledge and the “death of the renaissance man”: Is innovation getting
-        harder?. The Review of Economic Studies, 76(1), 283-317.
-      </li>
-      <li>
-        Jones, B. F. (2010). Age and great invention. The Review of Economics and Statistics, 92(1), 1-14.
-        Chicago
-      </li>
-      <li>
-        Mokyr, J. (2002). The gifts of Athena: Historical origins of the knowledge economy. Princeton University Press.
-      </li>
-      <li>
-        Scotchmer, S. (1991). Standing on the shoulders of giants: cumulative research and the patent law. Journal of
-        economic perspectives, 5(1), 29-41.
-      </li>
-      <li>
-        Azoulay, P., Graff Zivin, J. S., & Wang, J. (2010). Superstar extinction. The Quarterly Journal of Economics,
-        125(2), 549-589.
-      </li>
-      <li>
-        Waldinger, F. (2012). Peer effects in science: Evidence from the dismissal of scientists in Nazi Germany. The
-        Review of Economic Studies, 79(2), 838-861.
-        Chicago
-      </li>
-      <li>
-        Hellmanzik, C. (2010). Location matters: Estimating cluster premiums for prominent modern artists. European
-        Economic Review, 54(2), 199-218.
-      </li>
-    </ul>
+      <ul>
+        <li>
+          Romer, P. M. (1990). Endogenous technological change. Journal of political Economy, 98(5, Part 2), S71-S102.
+        </li>
+        <li>
+          Jones, B. F. (2009). The burden of knowledge and the “death of the renaissance man”: Is innovation getting
+          harder?. The Review of Economic Studies, 76(1), 283-317.
+        </li>
+        <li>
+          Jones, B. F. (2010). Age and great invention. The Review of Economics and Statistics, 92(1), 1-14.
+          Chicago
+        </li>
+        <li>
+          Mokyr, J. (2002). The gifts of Athena: Historical origins of the knowledge economy. Princeton University
+          Press.
+        </li>
+        <li>
+          Scotchmer, S. (1991). Standing on the shoulders of giants: cumulative research and the patent law. Journal of
+          economic perspectives, 5(1), 29-41.
+        </li>
+        <li>
+          Azoulay, P., Graff Zivin, J. S., & Wang, J. (2010). Superstar extinction. The Quarterly Journal of Economics,
+          125(2), 549-589.
+        </li>
+        <li>
+          Waldinger, F. (2012). Peer effects in science: Evidence from the dismissal of scientists in Nazi Germany. The
+          Review of Economic Studies, 79(2), 838-861.
+          Chicago
+        </li>
+        <li>
+          Hellmanzik, C. (2010). Location matters: Estimating cluster premiums for prominent modern artists. European
+          Economic Review, 54(2), 199-218.
+        </li>
+      </ul>
     </li>
   </ol>
 
@@ -1054,6 +1060,144 @@
     </ul>-->
 
 
+  <a class="anchor" id="Misc"><h1>Miscellaneous</h1></a>
+
+  <h2>More about me</h2>
+
+  In my free time, I enjoy learning about history, languages, and web design. I developed this website using CSS and
+  HTML (although I had help with the Javascript to collapse the navigation bar), and I manage the design and
+  content of the URI Chair website. I also enjoy learning more about the language, history, and culture of my husband's
+  country - Portugal. I started taking Portuguese language classes at the Portuguese Language Centre in Dublin in 2016,
+  and I have been learning primarily through self-study since moving to Dortmund. During our holidays, my husband and I
+  enjoy exploring the gastronomy and culture of Portugal. You can see some photos from our Portuguese adventures below.
+
+  <h2>Exploring Portugal</h2>
+  <div class="gallery">
+    <div class="photo">
+      <a target="_blank" href="img/Travel/Pombal.jpg">
+        <img src="img/Travel/Pombal.jpg" alt="Pombal">
+      </a>
+      <div class="desc">Pombal</div>
+    </div>
+    <div class="photo">
+      <a target="_blank" href="img/Travel/SãoLourenço.jpg">
+        <img src="img/Travel/SãoLourenço.jpg" alt="Mountains">
+      </a>
+      <div class="desc">São Lourenço</div>
+    </div>
+    <div class="photo">
+      <a target="_blank" href="img/Travel/Penela.jpg">
+        <img src="img/Travel/Penela.jpg" alt="Penela">
+      </a>
+      <div class="desc">Penela</div>
+    </div>
+    <div class="photo">
+      <a target="_blank" href="img/Travel/Coimbra.jpg">
+        <img src="img/Travel/Coimbra.jpg" alt="Coimbra">
+      </a>
+      <div class="desc">Coimbra</div>
+    </div>
+    <div class="photo">
+      <a target="_blank" href="img/Travel/Coimbra2.jpg">
+        <img src="img/Travel/Coimbra2.jpg" alt="Coimbra at night">
+      </a>
+      <div class="desc">Coimbra</div>
+    </div>
+    <div class="photo">
+      <a target="_blank" href="img/Travel/BussacoForest.jpg">
+        <img src="img/Travel/BussacoForest.jpg" alt="Bussaco Forest">
+      </a>
+      <div class="desc">Bussaco</div>
+    </div>
+    <div class="photo">
+      <img src="img/Travel/Comporta.jpg" alt="Comporta">
+      <div class="desc">Comporta</div>
+    </div>
+    <div class="photo">
+      <a target="_blank" href="img/Travel/Tomar.jpg">
+        <img src="img/Travel/Tomar.jpg" alt="Tomar">
+      </a>
+      <div class="desc">Tomar</div>
+    </div>
+    <div class="photo">
+      <a target="_blank" href="img/Travel/Lousã.jpg">
+        <img src="img/Travel/Lousã.jpg" alt="Lousã">
+      </a>
+      <div class="desc">Lousã</div>
+    </div>
+    <div class="photo">
+      <a target="_blank" href="img/Travel/Lisboa.jpg">
+        <img src="img/Travel/Lisboa.jpg" alt="Lisboa">
+      </a>
+      <div class="desc">Lisboa</div>
+    </div>
+    <div class="photo">
+      <a target="_blank" href="img/Travel/Piódão.jpg">
+        <img src="img/Travel/Piódão.jpg" alt="Piódão">
+      </a>
+      <div class="desc">Piódão</div>
+    </div>
+    <div class="photo">
+      <a target="_blank" href="img/Travel/Montemor-o-Velho.jpg">
+        <img src="img/Travel/Montemor-o-Velho.jpg" alt="Montemor-o-Velho">
+      </a>
+      <div class="desc">Montemor-o-Velho</div>
+    </div>
+    <div class="photo">
+      <a target="_blank" href="img/Travel/Conímbriga.jpeg">
+        <img src="img/Travel/Conímbriga.jpeg" alt="Conímbriga">
+      </a>
+      <div class="desc">Conímbriga</div>
+    </div>
+    <div class="photo">
+      <a target="_blank" href="img/Travel/Setúbal.jpg">
+        <img src="img/Travel/Setúbal.jpg" alt="Setúbal">
+      </a>
+      <div class="desc">Setúbal</div>
+    </div>
+    <div class="photo">
+      <a target="_blank" href="img/Travel/Sagres.jpg">
+        <img src="img/Travel/Sagres.jpg" alt="Sagres">
+      </a>
+      <div class="desc">Sagres</div>
+    </div>
+    <div class="photo">
+      <a target="_blank" href="img/Travel/PalacioBussaco.jpg">
+        <img src="img/Travel/PalacioBussaco.jpg" alt="Bussaco Palace">
+      </a>
+      <div class="desc">Bussaco</div>
+    </div>
+    <div class="photo">
+      <a target="_blank" href="img/Travel/Montemor-o-Velho2.jpg">
+        <img src="img/Travel/Montemor-o-Velho2-cropped.jpg" alt="Montemor-o-Velho2">
+      </a>
+      <div class="desc">Montemor-o-Velho</div>
+    </div>
+    <div class="photo">
+      <a target="_blank" href="img/Travel/Guimarães.jpg">
+        <img src="img/Travel/Guimarães-cropped.jpg" alt="Guimarães">
+      </a>
+      <div class="desc">Guimarães</div>
+    </div>
+    <div class="photo">
+      <a target="_blank" href="img/Travel/FigueiraDaFoz.jpg">
+        <img src="img/Travel/FigueiraDaFoz.jpg" alt="Figueira da Foz">
+      </a>
+      <div class="desc">Figueira da Foz</div>
+    </div>
+    <div class="photo">
+      <a target="_blank" href="img/Travel/Batalha.jpg">
+        <img src="img/Travel/BatalhaCropped.jpg" alt="Batalha">
+      </a>
+      <div class="desc">Batalha</div>
+    </div>
+    <div class="photo">
+      <a target="_blank" href="img/Travel/Porto.jpg">
+        <img src="img/Travel/Porto-Cropped.jpg" alt="Porto">
+      </a>
+      <div class="desc">Porto</div>
+    </div>
+  </div>
 </div>
 </body>
 </html>
