Updating CV and workingg paper

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         Ireland, where I contributed to a number of economic impact assessments, policy
         reviews, and other assignments for various government departments and agencies.</p>
 
-    <a href="img/SaraMitchellCV_Oct2020.pdf" download="SaraMitchellCV_Oct2020.pdf">
+    <a href="img/SaraMitchellCV_Dec2020.pdf" download="SaraMitchellCV_Dec2020.pdf">
         <p>Download my CV here</p>
     </a>
 
@@ -376,8 +376,10 @@
     <a class="anchor" id="Other Research"><h2>Other Research</h2></a>
     <h4>
         Location effects in literature: Evidence on peer quantity, quality, and productivity channels.
-        <em>Working
-            paper</em>
+        <a href="img/Mitchell_WorkingPaper_Dec2020.pdf" download="Mitchell_WorkingPaper_Dec2020.pdf">
+            <p><em>Working
+                paper</em></p>
+        </a>
     </h4>
     <p>
         This paper provides evidence of potential channels through which these location effects occur in the context of
