--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
     <h4>
         Localisation effects in literature: Peer quantity, quality, or productivity?
         <a href="img/Mitchell_WorkingPaper_Dec2020.pdf" download="SaraMitchell_JobMarketPaper2020.pdf">
-            <em>Job Market Paper</em>
+            <em>Working Paper</em>
         </a>
     </h4>
     <p>
