editing file name

--- a/index.html
+++ b/index.html
@@ -1238,7 +1238,7 @@
             <div class="desc">Figueira da Foz</div>
         </div>
         <div class="photo">
-            <a target="_blank" href="img/Travel/Batalha.jpg">
+            <a target="_blank" href="img/Travel/Batala.jpg">
                 <img src="img/Travel/BatalhaCropped.jpg" alt="Batalha">
             </a>
             <div class="desc">Batalha</div>
